--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,14 @@
 {
   "manifest_version": 2,
   "name": "You.com Search Engine",
-  "version": "1.1",
-  "description" : "Sets Firefox's default search engine and homepage to You.com",
+  "version": "1.2",
+  "description" : "Sets Firefox's default search engine to You.com",
   "icons": {
       "16": "icons/favicon-16x16.png",
       "48": "icons/favicon-48x48.png",
       "128": "icons/favicon-128x128.png"
     },
   "chrome_settings_overrides": {
-    "homepage": "https://you.com",
     "search_provider": {
       "name": "you.com",
       "keyword": "you",
