--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     "search_provider": {
       "name": "you.com",
       "keyword": "you",
-      "search_url": "https://you.com/search?q={searchTerms}&fromExtension=true",
+      "search_url": "https://you.com/search?q={searchTerms}&tbm=youchat&fromExtension=true",
       "suggest_url": "https://you.com/api/ac?q={searchTerms}&fromExtension=true",
       "favicon_url": "https://you.com/favicon/favicon.ico",
       "encoding": "UTF-8",
